--- a/src/clients/proofcortex-dashboard/index.html
+++ b/src/clients/proofcortex-dashboard/index.html
@@ -8,6 +8,7 @@
       body { font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial; margin:0; }
       .container { max-width: 1100px; margin: 2rem auto; padding: 1rem; }
     </style>
+    <script type="module" src="/js/wallet_bridge.js"></script>
   </head>
   <body>
     <div id="main"></div>
